# Dataset-Datajud

./: carga_dados.py  data.csv  mkdocs.yml  pyproject.toml
datajud/: app.py
datajud/controllers/: import_process.py  predict.py
datajud/models/: ml_gbm_datajud.pkl
datajud/routers/: import_process.py  predict.py
datajud/utils/: carga_dados.py
docs/: endpoints.md  index.md
site/: 404.html  index.html
site/endpoints/: index.html
site/search/: search_index.json
