[tool.poetry]
name = "datajud-project"
version = "0.1.0"
description = "Datajud project"
authors = ["ML Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.15.0"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
pandas = "^2.2.3"
requests = "^2.32.3"
scikit-learn = "1.3.2"
pydantic-settings = "^2.5.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
markdown-toc = "^1.2.6"
joblib = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
